--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,12 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.83"
-evdev = "0.12.2"
+evdev = { version = "0.12.2", features = ["tokio"] }
+futures = "0.3.30"
 itertools = "0.12.1"
 num-derive = "0.4.2"
 num-traits = "0.2.19"
 scopeguard = "1.2.0"
+tokio = { version = "1.37.0", features = ["rt", "time", "macros"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
