--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.83"
+clap = { version = "4.5.4", features = ["derive"] }
 evdev = { version = "0.12.2", features = ["tokio"] }
 futures = "0.3.30"
 itertools = "0.12.1"
@@ -15,4 +16,4 @@ num-traits = "0.2.19"
 scopeguard = "1.2.0"
 tokio = { version = "1.37.0", features = ["rt", "time", "macros"] }
 tracing = "0.1.40"
-tracing-subscriber = "0.3.18"
+tracing-subscriber = { version = "0.3.18", features = ["local-time"] }
